force-app/main/default/objects/Account/fields/SCP_Certa_GC__Buying_Criteria__c.field-meta.xml
<CustomField>
    <fullName>SCP_Certa_GC__Buying_Criteria__c</fullName>
    <label>Política de Compras</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>