force-app/main/default/objects/Account/fields/SCP_Certa_GC__Buying_Criteria_Last_Update__c.field-meta.xml
<CustomField>
    <fullName>SCP_Certa_GC__Buying_Criteria_Last_Update__c</fullName>
    <label>Política de Compras Last Update</label>
    <type>DateTime</type>
</CustomField>