force-app/main/default/objects/Account/fields/SCP_Certa_GC__Categoria__c.field-meta.xml
<CustomField>
    <fullName>SCP_Certa_GC__Categoria__c</fullName>
    <label>Categoría WH</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RP</fullName>
            </value>
            <value>
                <fullName>PP</fullName>
            </value>
            <value>
                <fullName>OP</fullName>
            </value>
            <value>
                <fullName>DG</fullName>
            </value>
            <value>
                <fullName>FI</fullName>
            </value>
            <value>
                <fullName>PI</fullName>
            </value>
            <value>
                <fullName>FT</fullName>
            </value>
            <value>
                <fullName>PT</fullName>
            </value>
            <value>
                <fullName>TT</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>FO</fullName>
            </value>
            <value>
                <fullName>EI</fullName>
            </value>
            <value>
                <fullName>ST</fullName>
            </value>
            <value>
                <fullName>EO</fullName>
            </value>
            <value>
                <fullName>ET</fullName>
            </value>
            <value>
                <fullName>MO</fullName>
            </value>
            <value>
                <fullName>PO</fullName>
            </value>
            <value>
                <fullName>OO</fullName>
            </value>
            <value>
                <fullName>MI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>