force-app/main/default/objects/Account/fields/SCP_Certa_GC__cliente_formula__c.field-meta.xml
<CustomField>
    <fullName>SCP_Certa_GC__cliente_formula__c</fullName>
    <formula>TEXT(SCP_Certa_GC__Numero_de_Cliente__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Numero de Cliente</label>
    <type>Text</type>
</CustomField>