force-app/main/default/objects/Account/fields/SCP_Certa_GC__CSAT_Last_Year__c.field-meta.xml
<CustomField>
    <fullName>SCP_Certa_GC__CSAT_Last_Year__c</fullName>
    <label>CSAT Last Year</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>