force-app/main/default/objects/Account/fields/SCP_Certa_GC__CSAT_Unit__c.field-meta.xml
<CustomField>
    <fullName>SCP_Certa_GC__CSAT_Unit__c</fullName>
    <label>CSAT Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>