force-app/main/default/objects/Account/fields/SCP_Certa_GC__Cuenta_Para_Los_Graficos__c.field-meta.xml
<CustomField>
    <fullName>SCP_Certa_GC__Cuenta_Para_Los_Graficos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cuenta Para Los Graficos</label>
    <type>Checkbox</type>
</CustomField>