force-app/main/default/objects/Account/fields/SCP_Certa_GC__CUIT__c.field-meta.xml
<CustomField>
    <fullName>SCP_Certa_GC__CUIT__c</fullName>
    <label>CUIT</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>