force-app/main/default/objects/Account/fields/SCP_Certa_GC__CUIT_Formula__c.field-meta.xml
<CustomField>
    <fullName>SCP_Certa_GC__CUIT_Formula__c</fullName>
    <formula>IF(LEN(TEXT(SCP_Certa_GC__CUIT__c)) = 11, 
(LEFT(TEXT(SCP_Certa_GC__CUIT__c),2) + &apos;-&apos; + MID(TEXT(SCP_Certa_GC__CUIT__c), 3,8) + &apos;-&apos; + RIGHT(TEXT(SCP_Certa_GC__CUIT__c),1)),
TEXT(SCP_Certa_GC__CUIT__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CUIT</label>
    <type>Text</type>
</CustomField>