force-app/main/default/objects/Account/fields/SCP_Certa_GC__DomicilioRecepcionNotificaciones__c.field-meta.xml
<CustomField>
    <fullName>SCP_Certa_GC__DomicilioRecepcionNotificaciones__c</fullName>
    <label>Domicilio de recepción de notificaciones</label>
    <length>255</length>
    <type>Text</type>
</CustomField>