force-app/main/default/objects/Account/fields/SCP_Certa_GC__External_Analysts_vision__c.field-meta.xml
<CustomField>
    <fullName>SCP_Certa_GC__External_Analysts_vision__c</fullName>
    <label>External Analysts vision</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>