force-app/main/default/objects/Account/fields/SCP_Certa_GC__Holding_Formula__c.field-meta.xml
<CustomField>
    <fullName>SCP_Certa_GC__Holding_Formula__c</fullName>
    <formula>TEXT(SCP_Certa_GC__Numero_de_Holding__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Holding</label>
    <type>Text</type>
</CustomField>