force-app/main/default/objects/Account/fields/SCP_Certa_GC__ID_Cliente__c.field-meta.xml
<CustomField>
    <fullName>SCP_Certa_GC__ID_Cliente__c</fullName>
    <label>ID Cliente</label>
    <length>15</length>
    <type>Text</type>
</CustomField>