force-app/main/default/objects/Account/fields/SCP_Certa_GC__idClienteLegado__c.field-meta.xml
<CustomField>
    <fullName>SCP_Certa_GC__idClienteLegado__c</fullName>
    <label>Id Cliente Legado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>