force-app/main/default/objects/Account/fields/SCP_Certa_GC__Micro_Industry__c.field-meta.xml
<CustomField>
    <fullName>SCP_Certa_GC__Micro_Industry__c</fullName>
    <label>Subsector</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Industry</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Centros Comerciales</fullName>
            </value>
            <value>
                <fullName>Automotores y Camiones</fullName>
            </value>
            <value>
                <fullName>Droguerías</fullName>
            </value>
            <value>
                <fullName>Tienda Departamental</fullName>
            </value>
            <value>
                <fullName>Otros Comercios</fullName>
            </value>
            <value>
                <fullName>Supermercados</fullName>
            </value>
            <value>
                <fullName>Alimentos y Bebidas</fullName>
            </value>
            <value>
                <fullName>Textil y Calzado</fullName>
            </value>
            <value>
                <fullName>Combustibles y Lubricantes</fullName>
            </value>
            <value>
                <fullName>Call Centers</fullName>
            </value>
            <value>
                <fullName>Grupo Telefonica</fullName>
            </value>
            <value>
                <fullName>Hardware Tecnológico</fullName>
            </value>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>Contenido Multimedia</fullName>
            </value>
            <value>
                <fullName>Telcos e Internet</fullName>
            </value>
            <value>
                <fullName>Banca</fullName>
            </value>
            <value>
                <fullName>Instituciones financieras no bancarias</fullName>
            </value>
            <value>
                <fullName>Medios de Pago</fullName>
            </value>
            <value>
                <fullName>Seguros</fullName>
            </value>
            <value>
                <fullName>Agro, Pesca y Forestación</fullName>
            </value>
            <value>
                <fullName>Construccion</fullName>
            </value>
            <value>
                <fullName>Industria Alimentos</fullName>
            </value>
            <value>
                <fullName>Industria Automotriz y Autopartes</fullName>
            </value>
            <value>
                <fullName>Industria Ligera y Manufacturas</fullName>
            </value>
            <value>
                <fullName>Industria Metalurgica y Pesada</fullName>
            </value>
            <value>
                <fullName>Industria Química</fullName>
            </value>
            <value>
                <fullName>Industria Textil y Calzado</fullName>
            </value>
            <value>
                <fullName>Laboratorios</fullName>
            </value>
            <value>
                <fullName>Mineria</fullName>
            </value>
            <value>
                <fullName>Petroleo y Gas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>