force-app/main/default/objects/Account/fields/SCP_Certa_GC__Numero_de_Cliente__c.field-meta.xml
<CustomField>
    <fullName>SCP_Certa_GC__Numero_de_Cliente__c</fullName>
    <label>Numero de Cliente</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>