force-app/main/default/objects/Account/fields/SCP_Certa_GC__Other_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>SCP_Certa_GC__Other_Opportunities__c</fullName>
    <label>Other Opportunities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>