force-app/main/default/objects/Account/fields/SCP_Certa_GC__People_Threats__c.field-meta.xml
<CustomField>
    <fullName>SCP_Certa_GC__People_Threats__c</fullName>
    <label>People Threats</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>