force-app/main/default/objects/Account/fields/SCP_Certa_GC__PicklistSegmento__c.field-meta.xml
<CustomField>
    <fullName>SCP_Certa_GC__PicklistSegmento__c</fullName>
    <label>Segmento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Negocio Corporativo</fullName>
            </value>
            <value>
                <fullName>Wholesale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>