force-app/main/default/objects/Account/fields/SCP_Certa_GC__Products_Services_Weakness__c.field-meta.xml
<CustomField>
    <fullName>SCP_Certa_GC__Products_Services_Weakness__c</fullName>
    <label>Products/Services Weakness</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>