force-app/main/default/objects/Account/fields/SCP_Certa_GC__Razon_Social__c.field-meta.xml
<CustomField>
    <fullName>SCP_Certa_GC__Razon_Social__c</fullName>
    <label>Razón Social</label>
    <length>255</length>
    <type>Text</type>
</CustomField>