force-app/main/default/objects/Account/fields/SCP_Certa_GC__Region__c.field-meta.xml
<CustomField>
    <fullName>SCP_Certa_GC__Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Región SCP</label>
    <referenceTo>SCP_Certa_GC__Region__c</referenceTo>
    <relationshipLabel>Cuentas</relationshipLabel>
    <relationshipName>Cuentas</relationshipName>
    <type>Lookup</type>
</CustomField>