force-app/main/default/objects/Account/fields/SCP_Certa_GC__Region_delta__c.field-meta.xml
<CustomField>
    <fullName>SCP_Certa_GC__Region_delta__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Privado</fullName>
            </value>
            <value>
                <fullName>Gobierno</fullName>
            </value>
            <value>
                <fullName>Pymes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>