force-app/main/default/objects/Account/fields/SCP_Certa_GC__Region_WH__c.field-meta.xml
<CustomField>
    <fullName>SCP_Certa_GC__Region_WH__c</fullName>
    <label>Region WH</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Grandes Operadores</fullName>
            </value>
            <value>
                <fullName>Interior</fullName>
            </value>
            <value>
                <fullName>Internacional</fullName>
            </value>
            <value>
                <fullName>Prestadores</fullName>
            </value>
            <value>
                <fullName>Telefonía</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>