force-app/main/default/objects/Account/fields/SCP_Certa_GC__Sector__c.field-meta.xml
<CustomField>
    <fullName>SCP_Certa_GC__Sector__c</fullName>
    <label>Ámbito</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Privado</fullName>
                <default>true</default>
                <label>Privado</label>
            </value>
            <value>
                <fullName>Público</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>