force-app/main/default/objects/Account/fields/SCP_Certa_GC__Segmento_Vertical__c.field-meta.xml
<CustomField>
    <fullName>SCP_Certa_GC__Segmento_Vertical__c</fullName>
    <label>Segmento Vertical</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salud - Clínicas, Sanatorios y Hospitales</fullName>
            </value>
            <value>
                <fullName>Gobierno Provincial</fullName>
            </value>
            <value>
                <fullName>Asociaciones e Instituciones</fullName>
            </value>
            <value>
                <fullName>Consultoras</fullName>
            </value>
            <value>
                <fullName>Servicios Inmobiliarios, Empresariales y de Alquiler</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Industria Alimenticia</fullName>
            </value>
            <value>
                <fullName>Industrias - Otro</fullName>
            </value>
            <value>
                <fullName>Construcción</fullName>
            </value>
            <value>
                <fullName>Gobierno Nacional</fullName>
            </value>
            <value>
                <fullName>Salud - Medicina Prepaga</fullName>
            </value>
            <value>
                <fullName>Seguros</fullName>
            </value>
            <value>
                <fullName>Servicios Financieros - Banca</fullName>
            </value>
            <value>
                <fullName>Medios de Comunicación</fullName>
            </value>
            <value>
                <fullName>Manufactura</fullName>
            </value>
            <value>
                <fullName>Servicios - Otro</fullName>
            </value>
            <value>
                <fullName>Industria Química</fullName>
            </value>
            <value>
                <fullName>Automotores - Autopartistas</fullName>
            </value>
            <value>
                <fullName>Tecnología</fullName>
            </value>
            <value>
                <fullName>Explotación de Minas y Canteras</fullName>
            </value>
            <value>
                <fullName>Salud - Laboratorios</fullName>
            </value>
            <value>
                <fullName>Petróleo</fullName>
            </value>
            <value>
                <fullName>Agricultura, Ganadería, Caza y Silvicultura</fullName>
            </value>
            <value>
                <fullName>Servicios Financieros</fullName>
            </value>
            <value>
                <fullName>Siderurgia / Metalurgia</fullName>
            </value>
            <value>
                <fullName>Prestadores Servicios Públicos - Energía</fullName>
            </value>
            <value>
                <fullName>Automotores - Industria Automotriz</fullName>
            </value>
            <value>
                <fullName>Logística</fullName>
            </value>
            <value>
                <fullName>Transporte</fullName>
            </value>
            <value>
                <fullName>Prestadores Servicios Públicos - GAS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>