force-app/main/default/objects/Account/fields/SCP_Certa_GC__Strategic_Context__c.field-meta.xml
<CustomField>
    <fullName>SCP_Certa_GC__Strategic_Context__c</fullName>
    <label>Contexto Estratégico</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>