force-app/main/default/objects/Account/fields/SCP_Certa_GC__Strategic_Context_Last_Update__c.field-meta.xml
<CustomField>
    <fullName>SCP_Certa_GC__Strategic_Context_Last_Update__c</fullName>
    <label>Ultima Actualización</label>
    <type>DateTime</type>
</CustomField>