force-app/main/default/objects/Account/fields/SCP_Certa_GC__Sub_region_delta__c.field-meta.xml
<CustomField>
    <fullName>SCP_Certa_GC__Sub_region_delta__c</fullName>
    <label>Territorio</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SCP_Certa_GC__Region_delta__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gobierno amba 1</fullName>
            </value>
            <value>
                <fullName>Gobierno amba 2</fullName>
            </value>
            <value>
                <fullName>Gobierno litoral</fullName>
            </value>
            <value>
                <fullName>Gobierno mediterraneo</fullName>
            </value>
            <value>
                <fullName>Industria</fullName>
            </value>
            <value>
                <fullName>Financias</fullName>
            </value>
            <value>
                <fullName>Servicios</fullName>
            </value>
            <value>
                <fullName>Privado litoral</fullName>
            </value>
            <value>
                <fullName>Privado mediterraneo</fullName>
            </value>
            <value>
                <fullName>Finanzas</fullName>
                <isActive>false</isActive>
                <label>Finanzas</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>