force-app/main/default/objects/Account/fields/SegmentDate__c.field-meta.xml
<CustomField>
    <fullName>SegmentDate__c</fullName>
    <description>#Marketing #Sprint15 campo que almacena la fecha de calculo de segmentación del BI</description>
    <label>BI Segment Date</label>
    <type>Date</type>
</CustomField>