force-app/main/default/objects/Account/fields/SegmentLevel1__c.field-meta.xml
<CustomField>
    <fullName>SegmentLevel1__c</fullName>
    <label>Segment Level 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SegmentLevel1</valueSetName>
    </valueSet>
</CustomField>