force-app/main/default/objects/Account/fields/SegmentLevel2__c.field-meta.xml
<CustomField>
    <fullName>SegmentLevel2__c</fullName>
    <label>Segment Level 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SegmentLevel2</valueSetName>
    </valueSet>
</CustomField>