force-app/main/default/objects/Account/fields/SegmentUniqueCode__c.field-meta.xml
<CustomField>
    <fullName>SegmentUniqueCode__c</fullName>
    <description>#MarketingTeam #Sprint08
Unique code identifier for segment level combination</description>
    <label>Segment Unique Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>