force-app/main/default/objects/Account/fields/Service_Account_Updated__c.field-meta.xml
<CustomField>
    <fullName>Service_Account_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is going to be used for the Batch process responsible to massively create the service account</description>
    <label>Service Account Updated</label>
    <type>Checkbox</type>
</CustomField>