force-app/main/default/objects/Account/fields/Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account Shipping Address based on Address2 model</description>
    <label>Shipping Address</label>
    <referenceTo>Address2__c</referenceTo>
    <relationshipLabel>Accounts (Shipping Address)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>