force-app/main/default/objects/Account/fields/ShippingAddressStore__c.field-meta.xml
<CustomField>
    <fullName>ShippingAddressStore__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ShippingAddressStore</label>
    <type>Checkbox</type>
</CustomField>