force-app/main/default/objects/Account/fields/SocialPlan__c.field-meta.xml
<CustomField>
    <fullName>SocialPlan__c</fullName>
    <defaultValue>false</defaultValue>
    <description>#MarketingTeam #Sprint08
Indicates if the account receives a social plan.</description>
    <label>Social Plan</label>
    <type>Checkbox</type>
</CustomField>