force-app/main/default/objects/Account/fields/Strategic__c.field-meta.xml
<CustomField>
    <fullName>Strategic__c</fullName>
    <defaultValue>false</defaultValue>
    <description>#MarketingTeam #Sprint13
Indicates if the accounts contact is strategic.</description>
    <label>Strategic</label>
    <type>Checkbox</type>
</CustomField>