force-app/main/default/objects/Account/fields/Suscription_BD__c.field-meta.xml
<CustomField>
    <fullName>Suscription_BD__c</fullName>
    <label>Suscription_BD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>null</fullName>
            </value>
            <value>
                <fullName>Fija</fullName>
            </value>
            <value>
                <fullName>Movil</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>