force-app/main/default/objects/Account/fields/Suspensiones_Voluntarias_Utilizadas__c.field-meta.xml
<CustomField>
    <fullName>Suspensiones_Voluntarias_Utilizadas__c</fullName>
    <label>Suspensions Voluntary Used</label>
    <length>2</length>
    <type>Text</type>
</CustomField>