force-app/main/default/objects/Account/fields/ta_sales_is_Dunning__c.field-meta.xml
<CustomField>
    <fullName>ta_sales_is_Dunning__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is checked, if any of the related asset on account has suspended status</description>
    <label>Is Dunning?</label>
    <type>Checkbox</type>
</CustomField>