force-app/main/default/objects/Account/fields/TaxCondition__c.field-meta.xml
<CustomField>
    <fullName>TaxCondition__c</fullName>
    <description>Este campo se debe eliminar</description>
    <label>TaxCondition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CF</fullName>
            </value>
            <value>
                <fullName>RS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>