force-app/main/default/objects/Account/fields/TelecomEmployee__c.field-meta.xml
<CustomField>
    <fullName>TelecomEmployee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>#MarketingTeam #Sprint08
Indicates if the account belongs to a Telecom employee</description>
    <label>Group Employee</label>
    <type>Checkbox</type>
</CustomField>