force-app/main/default/objects/Account/fields/TelecomExEmployee__c.field-meta.xml
<CustomField>
    <fullName>TelecomExEmployee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>#MarketingTeam #Sprint08
Indicates if the account belongs to a Telecom ex-employee</description>
    <label>Group ex-Employee</label>
    <type>Checkbox</type>
</CustomField>