force-app/main/default/objects/Account/fields/UnnamedCustomer__c.field-meta.xml
<CustomField>
    <fullName>UnnamedCustomer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marca de cliente no nominado</description>
    <label>Unnamed Customer</label>
    <type>Checkbox</type>
</CustomField>