force-app/main/default/objects/Account/fields/UserLevel__c.field-meta.xml
<CustomField>
    <fullName>UserLevel__c</fullName>
    <label>User Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Mid</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>