force-app/main/default/objects/Account/fields/ValidatedBillingAddress__c.field-meta.xml
<CustomField>
    <fullName>ValidatedBillingAddress__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Validated Billing Address</description>
    <inlineHelpText>Validated Billing Address</inlineHelpText>
    <label>Validated Billing Address</label>
    <type>Checkbox</type>
</CustomField>