force-app/main/default/objects/Account/fields/ValidatedShippingAddress__c.field-meta.xml
<CustomField>
    <fullName>ValidatedShippingAddress__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Validated Shipping Address</description>
    <inlineHelpText>Validated Shipping Address</inlineHelpText>
    <label>Validated Shipping Address</label>
    <type>Checkbox</type>
</CustomField>