force-app/main/default/objects/Account/fields/vlocity_cmt__BillDeliveryMethod__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__BillDeliveryMethod__c</fullName>
    <description>Chosen method to receive bills with values such as Paper Billing, eMail and Electronic Statements Online. Part of the billing profile of a customer or billing account.</description>
    <label>Bill Delivery Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Paper Billing</fullName>
                <default>true</default>
                <label>Paper Billing</label>
            </value>
            <value>
                <fullName>Electronic Statements Online</fullName>
            </value>
            <value>
                <fullName>eMail</fullName>
            </value>
            <value>
                <fullName>Factura Física</fullName>
            </value>
            <value>
                <fullName>Papel Factura Física</fullName>
            </value>
            <value>
                <fullName>Braille Factura Online</fullName>
            </value>
            <value>
                <fullName>SMS Factura Online</fullName>
            </value>
            <value>
                <fullName>Factura Física - Papel</fullName>
            </value>
            <value>
                <fullName>Factura Física - Braille</fullName>
            </value>
            <value>
                <fullName>Factura Online - SMS</fullName>
            </value>
            <value>
                <fullName>Factura Online - Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>