force-app/main/default/objects/Account/fields/vlocity_cmt__CLTV__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__CLTV__c</fullName>
    <description>CLTV or customer lifetime value is a monetary amount indicating the total value of this customer since the beginning of the customer&apos;s relationship with your organization.</description>
    <inlineHelpText>Client Lifetime Value</inlineHelpText>
    <label>CLTV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>